# cargo-binstall

./: .editorconfig  .gitignore  .ignore  Cargo.toml  Cross.toml  HELP.md  README.md  SIGNING.md  SUPPORT.md  action.yml  build.rs  cleanup-cache.sh  install-from-binstall-release.ps1  install-from-binstall-release.sh  justfile  release-plz.toml  release.toml  rust-toolchain.toml  test-detect-targets-musl.sh  windows.manifest  zigbuild-requirements.txt
.cargo/: config  (+1 more)
crates/atomic-file-install/: CHANGELOG.md  Cargo.toml
crates/atomic-file-install/src/: lib.rs
crates/binstalk/: CHANGELOG.md  Cargo.toml
crates/binstalk-bins/: CHANGELOG.md  Cargo.toml
crates/binstalk-bins/src/: lib.rs
crates/binstalk-downloader/: CHANGELOG.md  Cargo.toml
crates/binstalk-downloader/src/: cacher.rs  download.rs  gh_api_client.rs  git.rs  lib.rs  remote.rs  resolver.rs  utils.rs
crates/binstalk-downloader/src/download/: async_extracter.rs  async_extractor.rs  async_tar_visitor.rs  extracted_files.rs  extracter.rs  stream_readable.rs  utils.rs  zip_extraction.rs
crates/binstalk-downloader/src/gh_api_client/: request.rs
crates/binstalk-downloader/src/git/: progress_tracing.rs
crates/binstalk-downloader/src/remote/: certificate.rs  delay_request.rs  request_builder.rs  resolver.rs  tls_version.rs
crates/binstalk-fetchers/: CHANGELOG.md  Cargo.toml
crates/binstalk-fetchers/src/: common.rs  dist_manifest_fetcher.rs  futures_resolver.rs  gh_crate_meta.rs  lib.rs  quickinstall.rs  signing.rs
crates/binstalk-fetchers/src/gh_crate_meta/: hosting.rs
crates/binstalk-git-repo-api/: CHANGELOG.md  Cargo.toml
crates/binstalk-git-repo-api/src/: gh_api_client.rs  lib.rs
crates/binstalk-git-repo-api/src/gh_api_client/: common.rs  error.rs  release_artifacts.rs  repo_info.rs  request.rs
crates/binstalk-manifests/: CHANGELOG.md  Cargo.toml
crates/binstalk-manifests-types/: Cargo.toml
crates/binstalk-manifests-types/src/: crate_info.rs  lib.rs
crates/binstalk-manifests/src/: binstall_crates_v1.rs  cargo_config.rs  cargo_crates_v1.rs  cargo_credentials.rs  cargo_toml_binstall.rs  crate_info.rs  crates_manifests.rs  helpers.rs  lib.rs
crates/binstalk-manifests/src/cargo_crates_v1/: crate_version_source.rs
crates/binstalk-registry/: CHANGELOG.md  Cargo.toml
crates/binstalk-registry/src/: auth.rs  common.rs  crates_io_registry.rs  git_registry.rs  lib.rs  sparse_registry.rs  vfs.rs  visitor.rs
crates/binstalk-signal/: Cargo.toml
crates/binstalk-signal/src/: lib.rs
crates/binstalk-types/: CHANGELOG.md  Cargo.toml
crates/binstalk-types/src/: cargo_toml_binstall.rs  crate_info.rs  lib.rs  secrets.rs
crates/binstalk-types/src/cargo_toml_binstall/: package_formats.rs  target_triple.rs
crates/binstalk-utils/: Cargo.toml
crates/binstalk-utils/src/: gh_token.rs  git_credentials.rs  lib.rs  logging.rs
crates/binstalk/src/: bins.rs  drivers.rs  errors.rs  fetchers.rs  fs.rs  helpers.rs  lib.rs  ops.rs
crates/binstalk/src/drivers/: crates_io.rs  registry.rs  version.rs
crates/binstalk/src/drivers/crates_io/: versions.rs  vfs.rs  visitor.rs
crates/binstalk/src/drivers/registry/: common.rs  crates_io_registry.rs  git_registry.rs  sparse_registry.rs  vfs.rs  visitor.rs
crates/binstalk/src/fetchers/: gh_crate_meta.rs  quickinstall.rs
crates/binstalk/src/fetchers/gh_crate_meta/: hosting.rs
crates/binstalk/src/helpers/: cargo_toml_workspace.rs  download.rs  futures_resolver.rs  git.rs  jobserver_client.rs  lazy_gh_api_client.rs  logging.rs  remote.rs  signal.rs  statics.rs  target_triple.rs  tasks.rs
crates/binstalk/src/helpers/download/: async_extracter.rs  extracter.rs  stream_readable.rs
crates/binstalk/src/manifests/: binstall_crates_v1.rs  cargo_crates_v1.rs  cargo_toml_binstall.rs
crates/binstalk/src/manifests/cargo_crates_v1/: crate_version_source.rs
crates/binstalk/src/manifests/cargo_toml_binstall/: package_formats.rs
crates/binstalk/src/ops/: install.rs  resolve.rs
crates/binstalk/src/ops/resolve/: resolution.rs
crates/binstalk/tests/: parse-meta.rs
crates/cargo-toml-workspace/: CHANGELOG.md  Cargo.toml
crates/cargo-toml-workspace/src/: lib.rs
crates/detect-targets/: CHANGELOG.md  Cargo.toml  build.rs
crates/detect-targets/src/: desired_targets.rs  detect.rs  lib.rs  main.rs  probe.rs
crates/detect-targets/src/detect/: linux.rs  macos.rs  windows.rs
crates/detect-targets/src/probe/: elf.rs  table.rs
crates/detect-wasi/: CHANGELOG.md  Cargo.toml
crates/detect-wasi/src/: lib.rs  miniwasi.wasm
crates/flock/: Cargo.toml
crates/fs-lock/: CHANGELOG.md  Cargo.toml
crates/fs-lock/src/: lib.rs
crates/leon/: Cargo.toml
crates/leon-macros/: Cargo.toml
crates/leon-macros/src/: lib.rs
crates/leon-macros/tests/: parsing.rs
crates/leon/benches/: Cargo.toml  others.rs  values.rs
crates/leon/benches/benches/: others.rs  values.rs
crates/leon/fuzz/: Cargo.toml
crates/leon/fuzz/fuzz_targets/: fuzz_target.rs  parser.rs
crates/leon/src/: compiletime.rs  error.rs  helpers.rs  lib.rs  macros.rs  main.rs  parser.rs  template.rs  values.rs
crates/lib/: Cargo.toml  build.rs
crates/lib/src/: bins.rs  drivers.rs  fetchers.rs  fs.rs  helpers.rs  lib.rs  manifests.rs  miniwasi.wast  ops.rs  targets.rs  wasi.rs
crates/lib/src/drivers/: crates_io.rs  version.rs
crates/lib/src/fetchers/: gh_crate_meta.rs  quickinstall.rs
crates/lib/src/helpers/: async_extracter.rs  crate_name.rs  download.rs  extracter.rs  flock.rs  jobserver_client.rs  path_ext.rs  remote.rs  signal.rs  statics.rs  stream_readable.rs  tasks.rs  tls_version.rs  ui_thread.rs
crates/lib/src/manifests/: binstall_crates_v1.rs  cargo_crates_v1.rs  cargo_toml_binstall.rs  crate_info.rs
crates/lib/src/metafiles/: cvs.rs  v1.rs
crates/lib/src/ops/: install.rs  resolve.rs
crates/lib/tests/: parse-meta.Cargo.toml  parse-meta.rs
crates/normalize-path/: Cargo.toml
crates/normalize-path/src/: lib.rs
crates/simple-git/: Cargo.toml
crates/simple-git/src/: cancellation_token.rs  error.rs  lib.rs  progress_tracing.rs
crates/survey-index/: .gitignore  Cargo.toml
(+153 files in other folders)
