[workspace]
members = [
    "crates/bin",
    "crates/binstalk",
    "crates/binstalk-manifests",
    "crates/binstalk-types",
    "crates/binstalk-downloader",
    "crates/detect-wasi",
    "crates/fs-lock",
    "crates/normalize-path",
    "crates/detect-targets",
    "crates/leon",
    "crates/leon-macros",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true
lto = false
debug-assertions = true
overflow-checks = true
codegen-units = 1024

[profile.dev.build-override]
inherits = "dev"
debug = false
debug-assertions = false
overflow-checks = false
incremental = false

[profile.release.build-override]
inherits = "dev.build-override"
