[workspace]
members = [
    "crates/bin",
    "crates/binstalk",
    "crates/binstalk-manifests",
    "crates/binstalk-types",
    "crates/binstalk-downloader",
    "crates/detect-wasi",
    "crates/fs-lock",
    "crates/normalize-path",
    "crates/detect-targets",
    "crates/leon",
    "crates/leon-macros",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.release.build-override]
inherits = "dev.build-override"

[profile.dev]
opt-level = 0
debug = true
lto = false
debug-assertions = true
overflow-checks = true
codegen-units = 32

# Set the default for dependencies on debug.
[profile.dev.package."*"]
opt-level = 3

[profile.dev.build-override]
inherits = "dev"
debug = false
debug-assertions = false
overflow-checks = false
incremental = false

[profile.check-only]
inherits = "dev"
debug = false
debug-assertions = false
overflow-checks = false
panic = "abort"

[profile.check-only.build-override]
inherits = "check-only"

[profile.check-only.package."*"]
inherits = "check-only"
