[workspace]
resolver = "2"
members = [
    "crates/atomic-file-install",
    "crates/bin",
    "crates/binstalk",
    "crates/binstalk-bins",
    "crates/binstalk-fetchers",
    "crates/binstalk-registry",
    "crates/binstalk-manifests",
    "crates/binstalk-types",
    "crates/binstalk-downloader",
    "crates/cargo-toml-workspace",
    "crates/detect-wasi",
    "crates/fs-lock",
    "crates/normalize-path",
    "crates/detect-targets",
    "crates/binstalk-git-repo-api",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.release.build-override]
inherits = "dev.build-override"

[profile.release.package."astral-tokio-tar"]
opt-level = "z"

[profile.release.package."binstall-tar"]
opt-level = "z"

[profile.dev]
opt-level = 0
debug = "line-tables-only"
lto = false
debug-assertions = true
overflow-checks = true
codegen-units = 32

# Set the default for dependencies on debug.
[profile.dev.package."*"]
opt-level = 3

[profile.dev.package."astral-tokio-tar"]
opt-level = "z"

[profile.dev.package."binstall-tar"]
opt-level = "z"

[profile.dev.build-override]
inherits = "dev"
debug = false
debug-assertions = false
overflow-checks = false
incremental = false

[profile.check-only]
inherits = "dev"
debug = false
debug-assertions = false
overflow-checks = false
panic = "abort"

[profile.check-only.build-override]
inherits = "check-only"

[profile.check-only.package."*"]
inherits = "check-only"
# https://github.com/crate-ci/typos/blob/master/docs/reference.md
[workspace.metadata.typos.default]
extend-ignore-words-re = [
    '^[a-zA-Z]{1,2}$' # ignore words up to length 2
]
