[package]
name = "atomic-file-install"
version = "1.0.14"
edition = "2021"
description = "For atomically installing a file or a symlink."
repository = "https://github.com/cargo-bins/cargo-binstall"
documentation = "https://docs.rs/atomic-file-install"
authors = ["Jiahao XU <Jiahao_XU@outlook.com>"]
license = "Apache-2.0 OR MIT"
rust-version = "1.65.0"

[dependencies]
reflink-copy = "0.1.15"
tempfile = "3.5.0"
tracing = "0.1.43"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.0", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }
