[package]
name = "binstalk-downloader"
description = "The binstall toolkit for downloading and extracting file"
repository = "https://github.com/cargo-bins/cargo-binstall"
documentation = "https://docs.rs/binstalk-downloader"
version = "0.5.0"
rust-version = "1.65.0"
authors = ["ryan <ryan@kurte.nz>"]
edition = "2021"
license = "GPL-3.0"

[dependencies]
async-trait = "0.1.68"
async-compression = { version = "0.4.0", features = ["gzip", "zstd", "xz", "bzip2", "tokio"] }
async_zip = { version = "0.0.15", features = ["deflate", "bzip2", "lzma", "zstd", "xz", "tokio"] }
binstalk-types = { version = "0.4.0", path = "../binstalk-types" }
bytes = "1.4.0"
bzip2 = "0.4.4"
compact_str = "0.7.0"
digest = "0.10.6"
flate2 = { version = "1.0.26", default-features = false }
futures-lite = { version = "1.13.0", default-features = false }
futures-util = "0.3.28"
generic-array = "0.14.7"
httpdate = "1.0.2"
reqwest = { version = "0.11.18", features = ["stream", "gzip", "brotli", "deflate"], default-features = false }
serde = { version = "1.0.163", features = ["derive"], optional = true }
serde_json = { version = "1.0.96", optional = true }
# Use a fork here since we need PAX support, but the upstream
# does not hav the PR merged yet.
#
#tar = "0.4.38"
tar = { package = "binstall-tar", version = "0.4.39" }
tempfile = "3.5.0"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread", "sync", "time", "fs"], default-features = false }
tokio-tar = "0.3.0"
tokio-util = { version = "0.7.8", features = ["io"] }
tower = { version = "0.4.13", features = ["limit", "util"] }
tracing = "0.1.38"
# trust-dns-resolver must be kept in sync with the version reqwest uses
trust-dns-resolver = { version = "0.22.0", optional = true, default-features = false, features = ["dnssec-ring"] }
url = "2.3.1"

xz2 = "0.1.7"

# zstd is also depended by zip.
# Since zip 0.6.3 depends on zstd 0.11, we can use 0.12.0 here
# because it uses the same zstd-sys version.
# Otherwise there will be a link conflict.
zstd = { version = "0.12.3", default-features = false }

[features]
default = ["static", "rustls"]

static = ["bzip2/static", "xz2/static"]
pkg-config = ["zstd/pkg-config"]

zlib-ng = ["flate2/zlib-ng"]

rustls = [
    "reqwest/rustls-tls",

    # Enable the following features only if trust-dns-resolver is enabled.
    "trust-dns-resolver?/dns-over-rustls",
    # trust-dns-resolver currently supports https with rustls
    "trust-dns-resolver?/dns-over-https-rustls",
    "trust-dns-resolver?/dns-over-quic",
]
native-tls = ["reqwest/native-tls", "trust-dns-resolver?/dns-over-native-tls"]

# Enable trust-dns-resolver so that features on it will also be enabled.
trust-dns = ["trust-dns-resolver", "reqwest/trust-dns"]

zstd-thin = ["zstd/thin"]

cross-lang-fat-lto = ["zstd/fat-lto"]

gh-api-client = ["json"]
json = ["serde", "serde_json"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
