[package]
name = "binstalk-fetchers"
version = "0.10.8"
edition = "2021"

description = "The binstall fetchers"
repository = "https://github.com/cargo-bins/cargo-binstall"
documentation = "https://docs.rs/binstalk-fetchers"
rust-version = "1.70.0"
authors = ["Jiahao XU <Jiahao_XU@outlook.com>"]
license = "GPL-3.0-only"

[dependencies]
async-trait = "0.1.84"
binstalk-downloader = { version = "0.13.7", path = "../binstalk-downloader", default-features = false }
binstalk-git-repo-api = { version = "0.5.9", path = "../binstalk-git-repo-api" }
binstalk-types = { version = "0.9.2", path = "../binstalk-types" }
bytes = "1.4.0"
compact_str = { version = "0.8.0" }
either = "1.11.0"
itertools = "0.14.0"
leon = "3.0.0"
leon-macros = "1.0.1"
miette = "7.0.0"
minisign-verify = "0.2.1"
once_cell = "1.18.0"
strum = "0.26.1"
thiserror = "2.0.7"
tokio = { version = "1.35.0", features = [
    "rt",
    "sync",
], default-features = false }
tracing = "0.1.39"
url = "2.5.4"

[dev-dependencies]
binstalk-downloader = { version = "0.13.7", path = "../binstalk-downloader" }

[features]
quickinstall = []

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true
