[package]
name = "binstalk-fetchers"
version = "0.10.21"
edition = "2021"

description = "The binstall fetchers"
repository = "https://github.com/cargo-bins/cargo-binstall"
documentation = "https://docs.rs/binstalk-fetchers"
rust-version = "1.70.0"
authors = ["Jiahao XU <Jiahao_XU@outlook.com>"]
license = "GPL-3.0-only"

[dependencies]
async-trait = "0.1.88"
binstalk-downloader = { version = "0.13.20", path = "../binstalk-downloader", default-features = false }
binstalk-git-repo-api = { version = "0.5.22", path = "../binstalk-git-repo-api" }
binstalk-types = { version = "0.10.0", path = "../binstalk-types" }
bytes = "1.4.0"
compact_str = { version = "0.9.0" }
either = "1.11.0"
itertools = "0.14.0"
leon = "3.0.0"
leon-macros = "1.0.1"
miette = "7.0.0"
minisign-verify = "0.2.1"
once_cell = "1.18.0"
strum = "0.27.0"
thiserror = "2.0.11"
tokio = { version = "1.44.0", features = [
    "rt",
    "sync",
], default-features = false }
tracing = "0.1.39"
url = "2.5.4"

[dev-dependencies]
binstalk-downloader = { version = "0.13.20", path = "../binstalk-downloader" }

[features]
quickinstall = []

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true
