[package]
name = "binstalk-manifests"
description = "The binstall toolkit for manipulating with manifest"
repository = "https://github.com/cargo-bins/cargo-binstall"
documentation = "https://docs.rs/binstalk-manifests"
version = "0.17.24"
rust-version = "1.61.0"
authors = ["ryan <ryan@kurte.nz>"]
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
beef = { version = "0.5.2", features = ["impl_serde"] }
binstalk-types = { version = "0.10.3", path = "../binstalk-types" }
compact_str = { version = "0.9.0", features = ["serde"] }
fs-lock = { version = "0.1.14", path = "../fs-lock", features = ["tracing"] }
home = "0.5.9"
miette = "7.0.0"
semver = { version = "1.0.17", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
serde-tuple-vec-map = "1.0.1"
serde_json = "1.0.149"
thiserror = "2.0.11"
toml_edit = { version = "0.24.0", features = ["serde"] }
url = { version = "2.5.8", features = ["serde"] }

[dev-dependencies]
detect-targets = { version = "0.1.77", path = "../detect-targets" }
tempfile = "3.5.0"
