[package]
name = "binstalk-registry"
version = "0.6.0"
edition = "2021"
rust-version = "1.65.0"

description = "The binstall toolkit for fetching package from arbitrary registry"
repository = "https://github.com/cargo-bins/cargo-binstall"
documentation = "https://docs.rs/binstalk-registry"
authors = ["Jiahao_XU@outlook <Jiahao_XU@outlook.com>"]
license = "Apache-2.0 OR MIT"

[dependencies]
async-trait = "0.1.68"
base16 = "0.2.1"
binstalk-downloader = { version = "0.10.0", path = "../binstalk-downloader", default-features = false, features = ["json"] }
binstalk-types = { version = "0.7.0", path = "../binstalk-types" }
cargo-toml-workspace = { version = "5.0.0", path = "../cargo-toml-workspace" }
compact_str = { version = "0.7.0", features = ["serde"] }
leon = { version = "2.0.1", path = "../leon" }
miette = "5.9.0"
normalize-path = { version = "0.2.1", path = "../normalize-path" }
once_cell = "1.18.0"
semver = { version = "1.0.17", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.107"
sha2 = "0.10.7"
simple-git = { version = "0.2.2", optional = true }
tempfile = "3.5.0"
thiserror = "1.0.52"
tokio = { version = "1.35.0", features = ["rt", "sync"], default-features = false }
tracing = "0.1.39"
url = "2.3.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml_edit = { version = "0.21.0", features = ["serde"] }
binstalk-downloader = { version = "0.10.0", path = "../binstalk-downloader", default-features = false, features = ["rustls"] }

[features]
git = ["simple-git"]

crates_io_api = []

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true
