[package]
name = "binstalk-signal"
description = "The binstall toolkit for dealing with signal"
repository = "https://github.com/cargo-bins/cargo-binstall"
documentation = "https://docs.rs/binstalk-signal"
version = "0.1.0"
rust-version = "1.61.0"
authors = ["ryan <ryan@kurte.nz>"]
edition = "2021"
license = "GPL-3.0"

[dependencies]
futures-util = { version = "0.3.25", default-features = false, features = ["std"] }
# parking_lot - for OnceCell::const_new
tokio = { version = "1.21.2", features = ["macros", "sync", "signal", "parking_lot"], default-features = false }
