[package]
name = "binstalk-types"
description = "The binstall toolkit that contains basic types for binstalk crates"
repository = "https://github.com/cargo-bins/cargo-binstall"
documentation = "https://docs.rs/binstalk-types"
version = "0.10.0"
rust-version = "1.61.0"
authors = ["ryan <ryan@kurte.nz>"]
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
compact_str = { version = "0.9.0", features = ["serde"] }
maybe-owned = { version = "0.3.4", features = ["serde"] }
once_cell = "1.18.0"
semver = { version = "1.0.17", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
strum = "0.27.0"
strum_macros = "0.27.0"
url = { version = "2.5.4", features = ["serde"] }

[dev-dependencies]
serde_json = "1"
