[package]
name = "binstalk"
description = "The binstall toolkit (library interface)"
repository = "https://github.com/cargo-bins/cargo-binstall"
documentation = "https://docs.rs/binstalk"
version = "0.16.1"
rust-version = "1.65.0"
authors = ["ryan <ryan@kurte.nz>"]
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
binstalk-bins = { version = "0.1.0", path = "../binstalk-bins" }
binstalk-downloader = { version = "0.8.0", path = "../binstalk-downloader", default-features = false, features = ["gh-api-client"] }
binstalk-fetchers = { version = "0.1.1", path = "../binstalk-fetchers", features = ["quickinstall"] }
binstalk-registry = { version = "0.1.1", path = "../binstalk-registry" }
binstalk-types = { version = "0.5.0", path = "../binstalk-types" }
cargo-toml-workspace = { version = "1.0.0", path = "../cargo-toml-workspace" }
command-group = { version = "2.1.0", features = ["with-tokio"] }
compact_str = { version = "0.7.0", features = ["serde"] }
detect-targets = { version = "0.1.11", path = "../detect-targets", features = ["tracing"] }
either = "1.8.1"
itertools = "0.11.0"
jobslot = { version = "0.2.11", features = ["tokio"] }
leon = { version = "2.0.1", path = "../leon" }
maybe-owned = "0.3.4"
miette = "5.9.0"
semver = { version = "1.0.17", features = ["serde"] }
simple-git = { version = "0.1.0", path = "../simple-git", optional = true }
strum = "0.25.0"
target-lexicon = { version = "0.12.11", features = ["std"] }
tempfile = "3.5.0"
thiserror = "1.0.40"
tokio = { version = "1.30.0", features = ["rt", "process", "sync"], default-features = false }
tracing = "0.1.37"
url = { version = "2.3.1", features = ["serde"] }

[features]
default = ["static", "rustls", "git"]

git = ["binstalk-registry/git", "simple-git"]
git-max-perf = ["git", "simple-git/git-max-perf"]

static = ["binstalk-downloader/static"]
pkg-config = ["binstalk-downloader/pkg-config"]

zlib-ng = ["binstalk-downloader/zlib-ng"]

rustls = ["binstalk-downloader/rustls"]
native-tls = ["binstalk-downloader/native-tls"]

trust-dns = ["binstalk-downloader/trust-dns"]

# Experimental HTTP/3 client, this would require `--cfg reqwest_unstable`
# to be passed to `rustc`.
http3 = ["binstalk-downloader/http3"]

zstd-thin = ["binstalk-downloader/zstd-thin"]
cross-lang-fat-lto = ["binstalk-downloader/cross-lang-fat-lto"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
