[package]
name = "binstalk"
description = "The binstall toolkit (library interface)"
repository = "https://github.com/cargo-bins/cargo-binstall"
documentation = "https://docs.rs/binstalk"
version = "0.28.64"
rust-version = "1.79.0"
authors = ["ryan <ryan@kurte.nz>"]
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
binstalk-bins = { version = "0.6.20", path = "../binstalk-bins" }
binstalk-downloader = { version = "0.13.32", path = "../binstalk-downloader", default-features = false }
binstalk-git-repo-api = { version = "0.5.34", path = "../binstalk-git-repo-api" }
binstalk-fetchers = { version = "0.10.34", path = "../binstalk-fetchers", features = [
    "quickinstall",
] }
binstalk-registry = { version = "0.11.33", path = "../binstalk-registry" }
binstalk-types = { version = "0.10.3", path = "../binstalk-types" }
cargo-toml-workspace = { version = "7.0.7", path = "../cargo-toml-workspace" }
command-group = { version = "5.0.1", features = ["with-tokio"] }
compact_str = { version = "0.9.0", features = ["serde"] }
detect-targets = { version = "0.1.77", path = "../detect-targets", features = [
    "tracing",
] }
either = "1.11.0"
itertools = "0.14.0"
jobslot = { version = "0.2.11", features = ["tokio"] }
leon = "3.0.0"
maybe-owned = "0.3.4"
miette = "7.0.0"
semver = { version = "1.0.17", features = ["serde"] }
simple-git = { version = "0.2.18", optional = true }
strum = "0.27.0"
tempfile = "3.5.0"
thiserror = "2.0.11"
tokio = { version = "1.49.0", features = [
    "rt",
    "process",
    "sync",
    "time",
], default-features = false }
tracing = "0.1.43"
url = { version = "2.5.8", features = ["serde"] }
zeroize = "1.8.1"

[features]
default = ["static", "rustls", "git"]

git = ["binstalk-registry/git", "simple-git"]
git-max-perf = ["git", "simple-git/git-max-perf-safe", "zlib-rs"]

static = ["binstalk-downloader/static"]
pkg-config = ["binstalk-downloader/pkg-config"]

zlib-ng = ["binstalk-downloader/zlib-ng"]
zlib-rs = ["binstalk-downloader/zlib-rs"]

rustls = ["binstalk-downloader/rustls", "binstalk-registry/rustls"]
native-tls = ["binstalk-downloader/native-tls", "binstalk-registry/native-tls"]

trust-dns = ["binstalk-downloader/trust-dns"]

# Experimental HTTP/3 client, this would require `--cfg reqwest_unstable`
# to be passed to `rustc`.
http3 = ["binstalk-downloader/http3"]

zstd-thin = ["binstalk-downloader/zstd-thin"]
cross-lang-fat-lto = ["binstalk-downloader/cross-lang-fat-lto"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
