[package]
name = "cargo-toml-workspace"
version = "7.0.9"
edition = "2021"
description = "Parse cargo workspace and load specific crate"
repository = "https://github.com/cargo-bins/cargo-binstall"
documentation = "https://docs.rs/cargo-toml-workspace"
rust-version = "1.65.0"
authors = ["Jiahao XU <Jiahao_XU@outlook.com>"]
license = "Apache-2.0 OR MIT"

[dependencies]
cargo_toml = "0.22.1"
compact_str = { version = "0.9.0", features = ["serde"] }
globwalker = "0.9.0"
serde = "1.0.163"
thiserror = "2.0.11"
tracing = "0.1.43"

[dev-dependencies]
tempfile = "3.5.0"
